test/resources/invalid/com/boothj5/jarchexample/application/telephonenumber/repository/TelephoneNumberRepository.java
package com.boothj5.jarchexample.application.telephonenumber.repository;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.telephonenumber.dao.TelephoneNumberDAO;
